--- a/Optum_Scoops.ipynb
+++ b/Optum_Scoops.ipynb
@@ -45,11 +45,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "qXK5gln8f9j3"
+        "id": "qXK5gln8f9j3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8ea0aebd-1e24-4aa8-b98f-91e5c90a68da"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    This freaking doctor couldn't find out whats m...\n",
+              "1    The doctor was an ass. The worst experience ev...\n",
+              "2    It was a great doctor that treated my Disease ...\n",
+              "3    It was okay not that great. They charge a shit...\n",
+              "4        Don't go.  The Hospital is Bullshit%#^@$@#!@#\n",
+              "Name: Review, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
         "data = pd.read_csv(\"/content/Scoops dataset.csv\")\n",
         "data = data['Review']\n",
@@ -63,10 +83,30 @@
         "data"
       ],
       "metadata": {
-        "id": "0Sjv1OdN3Vmc"
+        "id": "0Sjv1OdN3Vmc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3bc8009e-977e-4ba1-b7e7-b0b15434af67"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    this freaking doctor couldn't find out whats m...\n",
+              "1    the doctor was an ass. the worst experience ev...\n",
+              "2    it was a great doctor that treated my disease ...\n",
+              "3    it was okay not that great. they charge a shit...\n",
+              "4        don't go.  the hospital is bullshit%#^@$@#!@#\n",
+              "Name: Review, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -82,9 +122,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "583e95ff-0025-4c95-8482-349bd49890c7"
+        "outputId": "96c27f38-2b0b-4c86-9e69-ccd5dc9f0ba1"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -112,10 +152,106 @@
         "words"
       ],
       "metadata": {
-        "id": "qDNJZKJjr77j"
+        "id": "qDNJZKJjr77j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c2efda5e-68de-4f88-fa59-c5743d557ad8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['this',\n",
+              " 'freaking',\n",
+              " 'doctor',\n",
+              " 'couldnt',\n",
+              " 'find',\n",
+              " 'out',\n",
+              " 'whats',\n",
+              " 'my',\n",
+              " 'diagnosis',\n",
+              " 'and',\n",
+              " 'kept',\n",
+              " 'me',\n",
+              " 'on',\n",
+              " '10',\n",
+              " 'different',\n",
+              " 'pills',\n",
+              " 'just',\n",
+              " 'for',\n",
+              " 'precaution',\n",
+              " 'when',\n",
+              " 'i',\n",
+              " 'needed',\n",
+              " 'none',\n",
+              " 'of',\n",
+              " 'them',\n",
+              " 'the',\n",
+              " 'doctor',\n",
+              " 'was',\n",
+              " 'an',\n",
+              " 'ass',\n",
+              " 'the',\n",
+              " 'worst',\n",
+              " 'experience',\n",
+              " 'ever',\n",
+              " 'the',\n",
+              " 'hospital',\n",
+              " 'was',\n",
+              " 'shit',\n",
+              " 'and',\n",
+              " 'dirty',\n",
+              " 'it',\n",
+              " 'sucked',\n",
+              " 'it',\n",
+              " 'was',\n",
+              " 'a',\n",
+              " 'great',\n",
+              " 'doctor',\n",
+              " 'that',\n",
+              " 'treated',\n",
+              " 'my',\n",
+              " 'disease',\n",
+              " 'made',\n",
+              " 'me',\n",
+              " 'feel',\n",
+              " 'at',\n",
+              " 'ease',\n",
+              " 'all',\n",
+              " 'the',\n",
+              " 'time',\n",
+              " 'it',\n",
+              " 'was',\n",
+              " 'okay',\n",
+              " 'not',\n",
+              " 'that',\n",
+              " 'great',\n",
+              " 'they',\n",
+              " 'charge',\n",
+              " 'a',\n",
+              " 'shit',\n",
+              " 'ton',\n",
+              " 'of',\n",
+              " 'money',\n",
+              " 'for',\n",
+              " 'small',\n",
+              " 'stupid',\n",
+              " 'problem',\n",
+              " 'dont',\n",
+              " 'go',\n",
+              " 'the',\n",
+              " 'hospital',\n",
+              " 'is',\n",
+              " 'bullshit']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -128,10 +264,67 @@
         "filtered"
       ],
       "metadata": {
-        "id": "JQfgGu8V4J5R"
+        "id": "JQfgGu8V4J5R",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bec0b0cd-0964-4838-a822-630633c717be"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['freaking',\n",
+              " 'doctor',\n",
+              " 'couldnt',\n",
+              " 'find',\n",
+              " 'whats',\n",
+              " 'diagnosis',\n",
+              " 'kept',\n",
+              " '10',\n",
+              " 'different',\n",
+              " 'pills',\n",
+              " 'precaution',\n",
+              " 'needed',\n",
+              " 'none',\n",
+              " 'doctor',\n",
+              " 'ass',\n",
+              " 'worst',\n",
+              " 'experience',\n",
+              " 'ever',\n",
+              " 'hospital',\n",
+              " 'shit',\n",
+              " 'dirty',\n",
+              " 'sucked',\n",
+              " 'great',\n",
+              " 'doctor',\n",
+              " 'treated',\n",
+              " 'disease',\n",
+              " 'made',\n",
+              " 'feel',\n",
+              " 'ease',\n",
+              " 'time',\n",
+              " 'okay',\n",
+              " 'great',\n",
+              " 'charge',\n",
+              " 'shit',\n",
+              " 'ton',\n",
+              " 'money',\n",
+              " 'small',\n",
+              " 'stupid',\n",
+              " 'problem',\n",
+              " 'dont',\n",
+              " 'go',\n",
+              " 'hospital',\n",
+              " 'bullshit']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -143,7 +336,7 @@
       "metadata": {
         "id": "OULnOK-nCKXr"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -173,7 +366,7 @@
       "metadata": {
         "id": "C7gBJjGRu5hT"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -198,9 +391,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cUN5choMHksC",
-        "outputId": "71c06f1e-ce3c-42c8-bc11-9cf72187b03b"
+        "outputId": "b19c38cf-0eeb-4816-90cd-83fb091459fb"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
